--- a/deb/openmediavault/usr/share/openmediavault/locale/pt_PT/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/pt_PT/openmediavault.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-05-14 10:53+0200\n"
-"PO-Revision-Date: 2015-05-14 08:53+0000\n"
+"POT-Creation-Date: 2015-05-22 21:54+0200\n"
+"PO-Revision-Date: 2015-05-22 19:54+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Portuguese (Portugal) (http://www.transifex.com/projects/p/openmediavault/language/pt_PT/)\n"
 "MIME-Version: 1.0\n"
@@ -198,10 +198,10 @@ msgstr "Ativar monitorização S.M.A.R.T."
 msgid "Add"
 msgstr "Adicionar"
 
-msgid "Add VLAN interface"
+msgid "Add VLAN connection"
 msgstr ""
 
-msgid "Add bond interface"
+msgid "Add bond connection"
 msgstr ""
 
 msgid "Add devices to RAID device"
@@ -498,9 +498,6 @@ msgstr "Bolívia"
 
 msgid "Bond"
 msgstr ""
-
-msgid "Bond options"
-msgstr "Opções de vinculo"
 
 msgid "Boot"
 msgstr "Arranque"
@@ -1019,13 +1016,16 @@ msgstr "Editar"
 msgid "Edit SSL certificate"
 msgstr "Editar certificado SSL"
 
-msgid "Edit VLAN interface"
+msgid "Edit VLAN connection"
 msgstr ""
 
-msgid "Edit bond interface"
+msgid "Edit Wi-Fi connection"
 msgstr ""
 
-msgid "Edit ethernet interface"
+msgid "Edit bond connection"
+msgstr ""
+
+msgid "Edit ethernet connection"
 msgstr ""
 
 msgid "Edit firewall rule"
@@ -2090,8 +2090,8 @@ msgstr "Mascara de rede"
 msgid "Network"
 msgstr "Rede"
 
-msgid "Network interface '%s' already exists"
-msgstr "Interface de rede '%s' já existe"
+msgid "Network interface '%s' (type=%s) already exists"
+msgstr ""
 
 msgid "Neutral Zone"
 msgstr "Zona Neutra"
@@ -2757,6 +2757,9 @@ msgstr "SSH"
 
 msgid "SSH public key"
 msgstr "Chave pública SSH"
+
+msgid "SSID"
+msgstr ""
 
 msgid "SSL/TLS"
 msgstr "SSL/TLS"
@@ -3958,6 +3961,9 @@ msgstr "Quando um cliente conecta inicialmente ao servidor o protocolo de identi
 
 msgid "When failed"
 msgstr "Quando falha"
+
+msgid "Wi-Fi"
+msgstr ""
 
 msgid "Wipe"
 msgstr "Limpar"
